# SpotifyDataProject

./: .gitignore  DanceModel.ipynb  DanceModelRegression.ipynb  DataAnalysis.ipynb  EDA.ipynb  EDA_scratchpad.ipynb  EDA_test.ipynb  ModelsDance.ipynb  README.md  RegressionModelDance.ipynb  RegressionModelPopularity.ipynb  import clean dataset.py  main.py  pyproject.toml  requirements.txt  roadmap.txt  setup.sh  spotify_feature_engineering.py
implementations/scripts/: import_kaggle_dataset.py  spotify_cleaner.py
notebooks/: DataAnalysis.ipynb  ModelsDance.ipynb
